Fixed visual bug - last message preview from home was broken if farewell message